Refactor DialobSession to use static factory method and update serialization logic